--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ body {
 .wrapper {
   background-color: white;
   max-width: 300px;
-  margin: 200px auto 0;
+  margin: auto;
   border-radius: 25px;
 }
 
